# 360vr

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cppvr.sln
cppvr/: AudioStream.cpp  AudioStream.h  BaseManager.h  Camera.cpp  Camera.h  CameraEntity.cpp  Carpet.cpp  Carpet.h  ChairManager.cpp  ChairManager.h  Core.cpp  Core.h  DebugCamera.cpp  DebugCamera.h  Entity.cpp  Entity.h  FileManager.cpp  FileManager.h  ForwardRenderer.cpp  ForwardRenderer.h  FrameBuffer.cpp  FrameBuffer.h  HeadSet.cpp  HeadSet.h  InputAxis.cpp  InputAxis.h  InputManager.cpp  InputManager.h  MainScene.cpp  MainScene.h  ManagerLocator.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshEntity.cpp  MeshEntity.h  MeshGeometry.cpp  MeshGeometry.h  MeshManager.cpp  (+49 more)
doc/: Doxyfile  doxygen.css  footer.html  header.html  mainpage.h
engine/: CMakeLists.txt
engine/include/Core/: BaseManager.h  Core.h  PointerDefs.h  ResourceManager.h
engine/include/Managers/: FileManager.h  FontManager.h  InputManager.h  MeshManager.h  RenderingManager.h  SceneManager.h  ShaderManager.h  TextureManager.h  VRManager.h  WindowManager.h
engine/include/Rendering/: ForwardRenderer.h  FrameBuffer.h  Renderer.h  RenderingParameters.h  RenderingState.h  UIRenderer.h
engine/include/Resources/: InputAxis.h  Material.h  Mesh.h  MeshGeometry.h  Shader.h  Texture.h
engine/include/Scene/: Camera.h  CameraEntity.h  Entity.h  MeshEntity.h  Transform.h
engine/include/UI/: Widget.h
engine/src/Core/: Core.cpp
engine/src/Managers/: FileManager.cpp  FontManager.cpp  InputManager.cpp  MeshManager.cpp  RenderingManager.cpp  SceneManager.cpp  ShaderManager.cpp  TextureManager.cpp  VRManager.cpp  WindowManager.cpp
engine/src/Rendering/: ForwardRenderer.cpp  FrameBuffer.cpp  Renderer.cpp  RenderingState.cpp  UIRenderer.cpp
engine/src/Resources/: InputAxis.cpp  Material.cpp  Mesh.cpp  MeshGeometry.cpp  Shader.cpp  Texture.cpp
engine/src/Scene/: Camera.cpp  CameraEntity.cpp  Entity.cpp  MeshEntity.cpp  Transform.cpp
engine/src/UI/: Widget.cpp
extlibs/include/LinearMath/: btAlignedObjectArray.h
extlibs/include/libavcodec/: avcodec.h
extlibs/lib/x64/: BulletCollision.lib  BulletDynamics.lib  LinearMath.lib
res/: config.json
res/data/shaders/: glass.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  widget.frag  widget.vert  wireframe.frag  wireframe.vert
vrtour/: CMakeLists.txt
vrtour/include/Managers/: UIManager.h  VideoManager.h
vrtour/include/Rendering/: SimpleMeshMaterial.h  SkyboxMaterial.h  TextMaterial.h  TextureStreamer.h  WidgetMaterial.h  WireFrameMaterial.h
vrtour/include/Scene/: CollisionWorld.h  DebugCamera.h  HeadSet.h  MainScene.h  StateGraph.h  SteamVRObject.h  VRScene.h
vrtour/include/UI/: RectangleWidget.h  TextWidget.h  Widget.h
vrtour/include/Video/: AudioPlayer.h  AudioStream.h  Video.h  VideoState.h  VideoStream.h
vrtour/src/: main.cpp
vrtour/src/Managers/: UIManager.cpp  VideoManager.cpp
vrtour/src/Rendering/: SimpleMeshMaterial.cpp  SkyboxMaterial.cpp  TextMaterial.cpp  TextureStreamer.cpp  WidgetMaterial.cpp  WireFrameMaterial.cpp
vrtour/src/Scene/: CollisionWorld.cpp  DebugCamera.cpp  HeadSet.cpp  MainScene.cpp  SteamVRObject.cpp  VRScene.cpp
vrtour/src/UI/: RectangleWidget.cpp  TextWidget.cpp  Widget.cpp
vrtour/src/Video/: AudioPlayer.cpp  AudioStream.cpp  Video.cpp  VideoState.cpp  VideoStream.cpp
